# tether_dynamics

./: CMakeLists.txt  package.xml
include/tether_dynamics/: tether_dynamics.h
src/: tether_dynamics.cpp  tether_dynamics_node.cpp
